steps/starting-point/k8s/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
spec:
  replicas: 2
  selector: 
    matchLabels:
      component: web
  template:
    metadata:
      labels: 
        component: web
    spec:
      containers:
        - name: client
          image: acr37107.azurecr.io/multi-client
          imagePullPolicy: Always
          ports: 
            - containerPort: 3000
          readinessProbe: # is the container ready to receive traffic?
            initialDelaySeconds: 10
            httpGet:
              port: 3000
              path: /healthz
          livenessProbe: # is the container healthy?
            initialDelaySeconds: 2
            periodSeconds: 5
            httpGet:
              port: 3000
              path: /healthz
          volumeMounts:
          - name: aks-tls-akv
            mountPath: /mnt/secrets-store
            readOnly: true
      volumes:
        - name: aks-tls-akv
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "aks-tls-akv"
