steps/starting-point/k8s/server-deployment.yaml
apiVersion: apps/v1

kind: Deployment
metadata: 
  name: server-deployment
spec:
  selector:
    matchLabels:
      component: server
  replicas: 1
  template:
    metadata:
      labels:
        component: server
    spec:
      containers:
        - name: server
          image: acr37107.azurecr.io/multi-server:v2
          imagePullPolicy: Always
          volumeMounts:
          - name: secrets-store-inline
            mountPath: "/mnt/secrets-store"
            readOnly: true
          ports:
            - containerPort: 5000
      volumes:
        - name: secrets-store-inline
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "postgres-secret-csi"
